--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
   <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;">From directionless bursts of motivation to</span><br>
   <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;">Consistent, focused execution (without burning out).</span>
 </h1>
-        <button class="pricing-cta" style="margin:0 0 1.2rem 0;">Apply now</button>
+        <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta" style="margin:0 0 1.2rem 0;display:inline-block;text-decoration:none;">Join now</a>
 
         <div style="max-width:900px;width:100%;margin:1.5rem auto 2.5rem auto;text-align:center;">
   <span style="display:inline-block;font-size:2.2rem;font-weight:400;color:#bdbdbd;line-height:1.12;letter-spacing:-1px;font-family:'Inter',sans-serif;width:100%;">
@@ -472,7 +472,7 @@
     <!-- YOUTUBE VIDEO SECTION -->
     <section class="main-video-v2">
       <div class="main-video-wrapper-v2">
-        <iframe width="100%" height="400" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 1.2rem; box-shadow: 0 2px 32px 0 #000a, 0 1.5px 8px 0 #0008;"></iframe>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/c-3zW8NLLT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 1.2rem; box-shadow: 0 2px 32px 0 #000a, 0 1.5px 8px 0 #0008;"></iframe>
       </div>
     </section>
 
@@ -482,9 +482,9 @@
     <!-- FAQ SECTION -->
     <section class="faq-v2" id="faq-v2" style="display:flex;align-items:flex-start;gap:2.5rem;margin:4rem 0 0 0;">
       <div class="faq-left-v2" style="flex:0 0 320px;">
-        <h2 style="font-size:4rem;line-height:1;margin:0 0 1rem 0;font-weight:700;letter-spacing:-2px;">FAQ</h2>
+        <h3 style="font-size:2.2rem;line-height:1;margin:0 0 1rem 0;font-weight:600;letter-spacing:-1px;font-family:'Inter',sans-serif;">FAQ</h3>
         <p style="color:#ccc;font-size:1rem;margin-bottom:2rem;max-width:260px;">Questions not answered? Use the button below to book a session with Daniel; he'll personally answer any queries you've got.</p>
-        <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta" style="text-decoration:none;">Book your interview now</a>
+        <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta" style="text-decoration:none;">Book your interview now</a> <!-- (keep for FAQ section) -->
       </div>
       <div class="faq-right-v2" style="flex:1;max-width:800px;">
         <div class="faq-dropdowns-v2" style="display:flex;flex-direction:column;gap:0.5rem;">
@@ -573,7 +573,7 @@
                 <p style="margin:0 0 0.5rem 0;">High Performance is not living the same day over and over again. (I would likely hate that more than you).</p>
                 <p style="margin:0 0 0.5rem 0;">Having a consistent routine actually creates a more adventurous life as it helps create freedom. Those who don’t have habits, routines, or organization have the LEAST amount of freedom – James Clear (Author of atomic habits)</p>
                 <p style="margin:0 0 0.5rem 0;">If you’re always caught up making decisions for the small tasks, you’ll never have time/energy for the important decisions. If you struggle with things like getting 7-9 hours of sleep, working out, staying focused on your priorities, waking up energized… It’s impossible to expect greatness in the bigger things.</p>
-                <p style="margin:0;">Book your free <a href="#" style="color:#ffce6a;text-decoration:underline">strategy call</a> with me and let’s talk about how you can start living to your fullest potential.</p>
+                <p style="margin:0;">Book your free <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" style="color:#ffce6a;text-decoration:underline">strategy call</a> with me and let’s talk about how you can start living to your fullest potential.</p>
               </div>
             </div>
           </div>
@@ -641,40 +641,55 @@
 
   <div class="testimonial-card" data-yt="ijLDiVfakFc">
     <div class="testimonial-thumb-wrap" style="width:100%;height:320px;position:relative;">
-      <img src="https://img.youtube.com/vi/ijLDiVfakFc/hqdefault.jpg" alt="Danielle's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;">
-      <div class="testimonial-hover" style="width:100%;height:100%;border-radius:1rem;top:0;left:0;transform:none;">Watch</div>
+      <img src="https://img.youtube.com/vi/ijLDiVfakFc/hqdefault.jpg" alt="Danielle's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;border:none;">
+      <div class="testimonial-hover">
+  <svg viewBox="0 0 18 18" width="18" height="18" style="display:inline-block;vertical-align:middle;margin-right:0.4em;fill:#fff;"><polygon points="5,3 15,9 5,15"/></svg>
+  <span style="font-weight:300;font-size:0.97rem;letter-spacing:0.02em;">Watch</span>
+</div>
     </div>
     <div class="testimonial-desc">Danielle built 2 businesses as a student and overcame ADHD, anxiety, and phone addiction.</div>
     <div class="testimonial-name">Danielle Cygal, Entrepreneur & Student</div>
   </div>
   <div class="testimonial-card" data-yt="swlpMghNPo0">
     <div class="testimonial-thumb-wrap" style="width:100%;height:320px;position:relative;">
-      <img src="https://img.youtube.com/vi/swlpMghNPo0/hqdefault.jpg" alt="Ethan's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;">
-      <div class="testimonial-hover" style="width:100%;height:100%;border-radius:1rem;top:0;left:0;transform:none;">Watch</div>
+      <img src="https://img.youtube.com/vi/swlpMghNPo0/hqdefault.jpg" alt="Ethan's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;border:none;">
+      <div class="testimonial-hover">
+  <svg viewBox="0 0 18 18" width="18" height="18" style="display:inline-block;vertical-align:middle;margin-right:0.4em;fill:#fff;"><polygon points="5,3 15,9 5,15"/></svg>
+  <span style="font-weight:300;font-size:0.97rem;letter-spacing:0.02em;">Watch</span>
+</div>
     </div>
     <div class="testimonial-desc">Ethan eliminated his chronic procrastination, overcame productivity guilt, and became more present-minded.</div>
     <div class="testimonial-name">Ethan Fung, Startup Entrepreneur & Creator</div>
   </div>
   <div class="testimonial-card" data-yt="bSkJAgfr1Ww">
     <div class="testimonial-thumb-wrap" style="width:100%;height:320px;position:relative;">
-      <img src="https://img.youtube.com/vi/bSkJAgfr1Ww/hqdefault.jpg" alt="Kerem's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;">
-      <div class="testimonial-hover" style="width:100%;height:100%;border-radius:1rem;top:0;left:0;transform:none;">Watch</div>
+      <img src="https://img.youtube.com/vi/bSkJAgfr1Ww/hqdefault.jpg" alt="Kerem's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;border:none;">
+      <div class="testimonial-hover">
+  <svg viewBox="0 0 18 18" width="18" height="18" style="display:inline-block;vertical-align:middle;margin-right:0.4em;fill:#fff;"><polygon points="5,3 15,9 5,15"/></svg>
+  <span style="font-weight:300;font-size:0.97rem;letter-spacing:0.02em;">Watch</span>
+</div>
     </div>
     <div class="testimonial-desc">Kerem overcame years of self-doubt and built a consistent routine, unlocking his academic and athletic potential.</div>
     <div class="testimonial-name">Kerem, Student & Athlete</div>
   </div>
   <div class="testimonial-card" data-yt="ytzh3AR5Iiw">
     <div class="testimonial-thumb-wrap" style="width:100%;height:320px;position:relative;">
-      <img src="https://img.youtube.com/vi/ytzh3AR5Iiw/hqdefault.jpg" alt="Amolak's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;">
-      <div class="testimonial-hover" style="width:100%;height:100%;border-radius:1rem;top:0;left:0;transform:none;">Watch</div>
+      <img src="https://img.youtube.com/vi/ytzh3AR5Iiw/hqdefault.jpg" alt="Amolak's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;border:none;">
+      <div class="testimonial-hover">
+  <svg viewBox="0 0 18 18" width="18" height="18" style="display:inline-block;vertical-align:middle;margin-right:0.4em;fill:#fff;"><polygon points="5,3 15,9 5,15"/></svg>
+  <span style="font-weight:300;font-size:0.97rem;letter-spacing:0.02em;">Watch</span>
+</div>
     </div>
     <div class="testimonial-desc">Amolak ran a six figure marketing agency as a full-time student. He overcame his chronic procrastination and finished more in two weeks than in the past five months.</div>
     <div class="testimonial-name">Amolak Dhillon, Entrepreneur & Student</div>
   </div>
   <div class="testimonial-card" data-yt="0kfml7GKH9U">
     <div class="testimonial-thumb-wrap" style="width:100%;height:320px;position:relative;">
-      <img src="https://img.youtube.com/vi/0kfml7GKH9U/hqdefault.jpg" alt="Katharina's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;">
-      <div class="testimonial-hover" style="width:100%;height:100%;border-radius:1rem;top:0;left:0;transform:none;">Watch</div>
+      <img src="https://img.youtube.com/vi/0kfml7GKH9U/hqdefault.jpg" alt="Katharina's Testimonial" class="testimonial-thumb" style="width:100%;height:100%;object-fit:cover;border-radius:1rem;border:none;">
+      <div class="testimonial-hover">
+  <svg viewBox="0 0 18 18" width="18" height="18" style="display:inline-block;vertical-align:middle;margin-right:0.4em;fill:#fff;"><polygon points="5,3 15,9 5,15"/></svg>
+  <span style="font-weight:300;font-size:0.97rem;letter-spacing:0.02em;">Watch</span>
+</div>
     </div>
     <div class="testimonial-desc">Katharina overcame 8 years of procrastination, self-doubt, and phone addiction.</div>
     <div class="testimonial-name">Katharina Hahn, Entrepreneur & FT Worker</div>
@@ -692,60 +707,63 @@
   .testimonial-card {
     display:inline-block;
     vertical-align:top;
-    width:320px;
-    background:#18181b;
-    border-radius:1.25rem;
-    box-shadow:0 2px 18px #0005;
+    width:auto;
+    background:transparent !important;
+    border-radius:0;
+    box-shadow:none !important;
     margin:0;
     cursor:pointer;
     transition:transform 0.12s;
     position:relative;
-    padding:2rem 1.5rem 1.5rem 1.5rem;
+    padding:0 !important;
     box-sizing:border-box;
     text-align:left;
-    min-height:340px;
-    overflow:hidden;
+    min-height:unset;
+    overflow:visible;
+    border:none !important;
   }
   .testimonial-card:hover { transform:translateY(-4px) scale(1.03); }
   .testimonial-thumb-wrap {
     display:flex;
     justify-content:center;
     align-items:center;
-    margin-bottom:1.2rem;
-  }
-  .testimonial-thumb {
     width:100%;
-    height:100%;
+    height:180px !important;
+    background:#222;
     border-radius:1rem;
     object-fit:cover;
     display:block;
-    border:none;
+    border:none !important;
     background:#222;
-    box-shadow:0 2px 8px #0003;
+    box-shadow:none !important;
   }
   .testimonial-hover {
     display:flex;
+    flex-direction:row;
     align-items:center;
-    justify-content:center;
+    justify-content:flex-start;
     opacity:0;
     position:absolute;
     top:0; left:0;
-    width:100%; height:100%;
-    background:rgba(0,0,0,0.45);
+    width:auto; height:auto;
+    padding:0.5rem 1.1rem 0.5rem 0.7rem;
+    background:rgba(0,0,0,0.18);
     color:#fff;
-    font-size:1.35rem;
-    font-weight:700;
-    letter-spacing:0.5px;
+    font-size:0.97rem;
+    font-weight:300;
+    letter-spacing:0.02em;
     transition:opacity 0.2s;
-    border-radius:1rem;
+    border-radius:0.7rem;
     pointer-events:none;
     z-index:2;
+    margin:0.7rem 0 0 0.7rem;
+    box-shadow:0 2px 8px #0002;
   }
   .testimonial-card:hover .testimonial-hover { opacity:1; pointer-events:auto; }
   .testimonial-desc {
-    font-size:0.99rem;
-    color:#bdbdbd;
-    min-height:56px;
+    font-size:0.93rem !important;
+    color:#bdbdbd !important;
+    min-height:48px;
     line-height:1.4;
     margin-bottom:0.5rem;
     padding:0;
@@ -753,6 +771,7 @@
     overflow-wrap:break-word;
     word-break:break-word;
     max-width:100%;
+    font-weight:400 !important;
   }
   .testimonial-name {
     font-size:0.93rem;
@@ -827,7 +846,7 @@
     <li><span class="checkmark">&#10003;</span> Gamified Accountability & Challenges</li>
     <li><span class="checkmark">&#10003;</span> 5 Pillar Modules</li>
   </ul>
-  <button class="pricing-cta">Join now</button>
+  <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta" style="text-decoration:none;">Join now</a>
 </section>
 <style>
 /* --- Responsive Helpers & Best Practices --- */
@@ -1179,37 +1198,42 @@ strong, b {
   }
 }
 .pricing-card {
-  background: radial-gradient(ellipse at 80% 0,#181c18 60%,#101210 100%);
+  background: radial-gradient(ellipse at 80% 0, #101510 0.4%, #0a0e0a 100%);
   border-radius: 2rem;
   box-shadow: 0 2px 24px #000a;
   padding: 2.5rem 2.5rem 2rem 2.5rem;
   max-width: 370px;
   margin: 2rem auto 2.5rem auto;
   color: #fff;
-  border: 1.5px solid rgba(90,255,150,0.04);
+  border: 1px solid rgba(81,255,176,0.11);
   transition: box-shadow 0.25s, border 0.25s;
 }
 .pricing-card:hover {
-  border: 1.5px solid #51ffb0;
-  box-shadow: 0 0 0 3px #51ffb055, 0 2px 24px #000a;
+  border: 1px solid #38c47c;
+  box-shadow: 0 0 0 1.5px #38c47c88, 0 2px 24px #000a;
 }
 .pricing-title {
   font-size: 1.35rem;
-  font-weight: 700;
+  font-weight: 400;
   color: #e5e5e5;
   margin-bottom: 0.7rem;
+  letter-spacing: -0.02em;
 }
 .pricing-price {
   font-size: 3.1rem;
-  font-weight: 800;
+  font-weight: 500;
   color: #fff;
-  margin-bottom: 0.55rem;
-  line-height: 1.07;
+  margin-bottom: 0.18rem;
+  line-height: 1.05;
+  letter-spacing: -0.02em;
 }
 .pricing-lifetime {
-  font-size: 1.3rem;
-  font-weight: 500;
+  font-size: 1.1rem;
+  font-weight: 400;
   color: #bdbdbd;
+  margin-left: 0.18em;
+  letter-spacing: 0.09em;
+  position:relative;top:-0.11em;
 }
 .pricing-features {
   list-style: none;
@@ -1217,40 +1241,44 @@ strong, b {
   margin: 2rem 0 2.2rem 0;
 }
 .pricing-features li {
-  font-size: 1.12rem;
-  margin-bottom: 1.15rem;
-  font-weight: 500;
+  font-size: 1.08rem;
+  margin-bottom: 0.93rem;
+  font-weight: 400;
   color: #e5e5e5;
   display: flex;
   align-items: center;
   gap: 0.7rem;
+  letter-spacing: -0.01em;
 }
 .checkmark {
-  color: #51ffb0;
+  color: #174233;
   font-size: 1.15rem;
   font-weight: 700;
   display: inline-block;
   margin-right: 0.2rem;
 }
-.pricing-cta {
-  background: #fff;
-  color: #18181b;
-  font-size: 1.13rem;
-  font-weight: 600;
-  padding: 0.85rem 2.3rem;
-  border-radius: 2rem;
-  border: none;
-  box-shadow: 0 2px 16px #0002;
+.pricing-cta, .faq-btn-v2, .white-btn, button.white-btn, a.white-btn, .pricing-cta[style*='background:#fff'], .faq-btn-v2[style*='background:#fff'], a[style*='background:#fff'], button[style*='background:#fff'] {
+  background: #fff !important;
+  color: #18181b !important;
+  font-weight: 400 !important;
+  font-size: 1.03rem !important;
+  border-radius: 2rem !important;
+  border: none !important;
+  box-shadow: 0 2px 16px #0002 !important;
   cursor: pointer;
-  transition: box-shadow 0.18s, background 0.18s, color 0.18s;
-  margin-top: 0.5rem;
-  outline: none;
-  letter-spacing: 0.01em;
+  transition: background 0.18s, color 0.18s, box-shadow 0.18s;
+  outline: none !important;
+  letter-spacing: 0.01em !important;
 }
-.pricing-cta:hover {
-  background: #eafff4;
-  color: #18181b;
-  box-shadow: 0 0 0 4px #51ffb055, 0 2px 16px #0003;
+.pricing-cta:hover, .faq-btn-v2:hover, .white-btn:hover, button.white-btn:hover, a.white-btn:hover, .pricing-cta[style*='background:#fff']:hover, .faq-btn-v2[style*='background:#fff']:hover, a[style*='background:#fff']:hover, button[style*='background:#fff']:hover {
+  background: #bdbdbd !important;
+  color: #18181b !important;
+  box-shadow: 0 2px 20px #0003 !important;
+}
+.pricing-cta:active, .faq-btn-v2:active, .white-btn:active, button.white-btn:active, a.white-btn:active, .pricing-cta[style*='background:#fff']:active, .faq-btn-v2[style*='background:#fff']:active, a[style*='background:#fff']:active, button[style*='background:#fff']:active {
+  background: #9e9e9e !important;
+  color: #18181b !important;
+  box-shadow: 0 1px 6px #0002 !important;
 }
 </style>
 
