--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
   <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;">From directionless bursts of motivation to</span><br>
   <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;">Consistent, focused execution (without burning out).</span>
 </h1>
-        <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta" style="margin:0 0 1.2rem 0;display:inline-block;text-decoration:none;">Join now</a>
+        <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta mb-responsive" style="text-decoration:none;">Join now</a>
 
         <div style="max-width:900px;width:100%;margin:1.5rem auto 2.5rem auto;text-align:center;">
   <span style="display:inline-block;font-size:2.2rem;font-weight:400;color:#bdbdbd;line-height:1.12;letter-spacing:-1px;font-family:'Inter',sans-serif;width:100%;">
