--- a/index.html
+++ b/index.html
@@ -454,13 +454,13 @@
         </nav>
       </header>
       <div class="hero-content-v2">
-        <h1 style="font-size:3.2rem;font-weight:400;line-height:1.12;color:#bdbdbd;margin-bottom:2rem;letter-spacing:-1px;font-family:'Inter',sans-serif;">
+        <h1 class="main-title-v2" style="font-size:3.7rem;font-weight:700;line-height:1.07;color:#fff;margin:0 0 3.5rem 0;letter-spacing:-2px;font-family:'Inter',sans-serif;">
   <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;">From directionless bursts of motivation to</span><br>
-  <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;">Consistent, focused execution (without burning out).</span>
+  <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;"> <span style="color:#fff; font-weight:500;"> consistent, focused execution</span>.</span>
 </h1>
         <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta mb-responsive" style="text-decoration:none;">Join now</a>
 
-        <div style="max-width:900px;width:100%;margin:1.5rem auto 2.5rem auto;text-align:center;">
+        <div style="max-width:900px;width:100%;margin:3.5rem auto 2.5rem auto;text-align:center;">
   <span style="display:inline-block;font-size:2.2rem;font-weight:400;color:#bdbdbd;line-height:1.12;letter-spacing:-1px;font-family:'Inter',sans-serif;width:100%;">
     Copy and paste the same blueprint used by <span style='color:#fff;font-weight:500;font-family:Inter,sans-serif;font-size:2.2rem;'>200+ high performing members</span>
   </span>
@@ -471,10 +471,12 @@
 
     <!-- YOUTUBE VIDEO SECTION -->
     <section class="main-video-v2">
-      <div class="main-video-wrapper-v2">
-        <iframe width="100%" height="400" src="https://www.youtube.com/embed/c-3zW8NLLT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 1.2rem; box-shadow: 0 2px 32px 0 #000a, 0 1.5px 8px 0 #0008;"></iframe>
-      </div>
-    </section>
+  <div class="main-video-wrapper-v2" style="position:relative;width:100%;max-width:900px;margin:0 auto;">
+    <div style="position:relative;width:100%;padding-top:56.25%;border-radius:1.2rem;box-shadow:0 2px 32px 0 #000a,0 1.5px 8px 0 #0008;overflow:hidden;">
+      <iframe src="https://www.youtube.com/embed/c-3zW8NLLT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"></iframe>
+    </div>
+  </div>
+</section>
 
 
 
@@ -841,10 +843,11 @@
   <h2 class="pricing-title">On Purpose Collective</h2>
   <div class="pricing-price">$599 <span class="pricing-lifetime">/ lifetime</span></div>
   <ul class="pricing-features">
-    <li><span class="checkmark">&#10003;</span> 2 Weekly LIVE Community Calls</li>
+    <li><span class="checkmark">&#10003;</span> 2 Weekly LIVE Coaching Calls</li>
     <li><span class="checkmark">&#10003;</span> Private High Performance Community</li>
     <li><span class="checkmark">&#10003;</span> Gamified Accountability & Challenges</li>
     <li><span class="checkmark">&#10003;</span> 5 Pillar Modules</li>
+    <li><span class="checkmark">&#10003;</span> 60 day High Performance Roadmap</li>
   </ul>
   <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta" style="text-decoration:none;">Join now</a>
 </section>
@@ -1209,8 +1212,8 @@ strong, b {
   transition: box-shadow 0.25s, border 0.25s;
 }
 .pricing-card:hover {
-  border: 1px solid #38c47c;
-  box-shadow: 0 0 0 1.5px #38c47c88, 0 2px 24px #000a;
+  border: 0,2px solid #325238d9;
+  box-shadow: 0 0 0 1.5px #203d26d9, 0 2px 20px #000a;
 }
 .pricing-title {
   font-size: 1.35rem;
