--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background: radial-gradient(ellipse at 60% 0%, #2a174e 0%, #18181b 40%, #0a0a0a 100%);
+      background: #0a0e0a;
       color: var(--text);
       line-height: 1.6;
       min-height: 100vh;
