--- a/index.html
+++ b/index.html
@@ -34,9 +34,26 @@
       html, body {
         max-width: 100vw !important;
         overflow-x: hidden !important;
-        padding: 0 !important;
+        display: flex;
+        flex-direction: column;
       }
-      .container, .main-container, section, header {
+      .main-title-v2 {
+        font-size: 2.5rem !important;
+      }
+      .blueprint-mobile {
+        font-size: 1.25rem !important;
+      }
+      .testimonial-title {
+        font-size: 2.8rem !important;
+      }
+      .join-now-mobile-hide {
+        display: none !important;
+      }
+      .reorder-mobile {
+        width: 100%;
+        order: unset !important;
+      }
+      section, header {
         max-width: 100vw !important;
         width: 100vw !important;
         padding-left: 0.75rem !important;
@@ -458,10 +475,10 @@
   <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;">From directionless bursts of motivation to</span><br>
   <span style="color:#bdbdbd;font-weight:400;font-family:'Inter',sans-serif;"> <span style="color:#fff; font-weight:500;"> consistent, focused execution</span>.</span>
 </h1>
-        <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta mb-responsive" style="text-decoration:none;">Join now</a>
+        <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta mb-responsive join-now-mobile-hide" style="text-decoration:none;">Join now</a>
 
         <div style="max-width:900px;width:100%;margin:3.5rem auto 2.5rem auto;text-align:center;">
-  <span style="display:inline-block;font-size:2.2rem;font-weight:400;color:#bdbdbd;line-height:1.12;letter-spacing:-1px;font-family:'Inter',sans-serif;width:100%;">
+  <span class="blueprint-mobile" style="display:inline-block;font-size:2.2rem;font-weight:400;color:#bdbdbd;line-height:1.12;letter-spacing:-1px;font-family:'Inter',sans-serif;width:100%;">
     Copy and paste the same blueprint used by <span style='color:#fff;font-weight:500;font-family:Inter,sans-serif;font-size:2.2rem;'>200+ high performing members</span>
   </span>
 </div>
@@ -470,7 +487,7 @@
     </section>
 
     <!-- YOUTUBE VIDEO SECTION -->
-    <section class="main-video-v2">
+    <section class="main-video-v2 reorder-mobile" style="order:1;">
   <div class="main-video-wrapper-v2" style="position:relative;width:100%;max-width:900px;margin:0 auto;">
     <div style="position:relative;width:100%;padding-top:56.25%;border-radius:1.2rem;box-shadow:0 2px 32px 0 #000a,0 1.5px 8px 0 #0008;overflow:hidden;">
       <iframe src="https://www.youtube.com/embed/c-3zW8NLLT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"></iframe>
@@ -482,9 +499,9 @@
 
    
     <!-- FAQ SECTION -->
-    <section class="faq-v2" id="faq-v2" style="display:flex;align-items:flex-start;gap:2.5rem;margin:4rem 0 0 0;">
+    <section class="faq-v2 reorder-mobile" id="faq-v2" style="display:flex;align-items:flex-start;gap:2.5rem;margin:4rem 0 0 0;order:2;">
       <div class="faq-left-v2" style="flex:0 0 320px;">
-        <h3 style="font-size:2.2rem;line-height:1;margin:0 0 1rem 0;font-weight:600;letter-spacing:-1px;font-family:'Inter',sans-serif;">FAQ</h3>
+        <h2 class="testimonial-title" style="font-size:2.2rem;line-height:1.1;margin-bottom:1.8rem;font-weight:700;letter-spacing:-1px;color:#fff;font-family:'Inter',sans-serif;text-align:center;">FAQ</h2>
         <p style="color:#ccc;font-size:1rem;margin-bottom:2rem;max-width:260px;">Questions not answered? Use the button below to book a session with Daniel; he'll personally answer any queries you've got.</p>
         <a href="https://calendly.com/myk5/opc-interview" target="_blank" rel="noopener" class="pricing-cta" style="text-decoration:none;">Book your interview now</a> <!-- (keep for FAQ section) -->
       </div>
@@ -630,7 +647,7 @@
     </script>
 
     <section id="testimonials" class="testimonials">
-      <h2>What Our Members Say</h2>
+      <h1>What Our Members Say</h1>
 <div style="display:flex;justify-content:flex-start;align-items:center;margin-bottom:0.5rem;gap:1.5rem;margin-left:2.2rem;">
   <button id="testimonial-arrow-left" aria-label="Scroll left" style="background:rgba(40,40,40,0.82);border:none;border-radius:50%;width:38px;height:38px;display:flex;align-items:center;justify-content:center;box-shadow:0 1px 6px #0002;cursor:pointer;transition:background 0.2s;outline:none;padding:0;">
   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13 16L8 10L13 4" stroke="#fff" stroke-width="2.1" stroke-linecap="round" stroke-linejoin="round"/></svg>
